Product and collection cards issues and alignment #225 and #200

--- a/src/scss/components/_collection-card.scss
+++ b/src/scss/components/_collection-card.scss
@@ -24,6 +24,8 @@
       img {
         border: none;
         border-radius: 0;
+        margin: auto;
+        display: block;
       }
     }
     &.hover-effect:hover {
@@ -47,7 +49,7 @@
     margin-bottom: $gutter;
     .collection-card__title {
       &.collection-card__title--overlay {
-        top: 36%;
+        top: 40%;
       }
     }
   }
