--- a/src/scss/sections/_featured_collections.scss
+++ b/src/scss/sections/_featured_collections.scss
@@ -35,6 +35,26 @@
 
   }
 }
+.collection-list-grid {
+  .collection-list__item {
+    margin: 0;
+
+    img {
+      border: 2px solid $color-border;
+      border-radius: $radius;
+    }
+
+    p {
+      margin-top: $gutter / 3;
+      a {
+        font-size: $font-size-base * 1.15;
+      }
+    }
+
+  }
+}
+
+
 
 .slider {
   &:not(.slick-initialized) {
